--- a/Source/HelloWorld/HelloWorld.Service/Web.config
+++ b/Source/HelloWorld/HelloWorld.Service/Web.config
@@ -40,7 +40,7 @@
     </protocolMapping>
     <services>
       <service name="HelloWorld.Domain.Services.HelloWorldService" behaviorConfiguration="UnsecureHttpBehavior">
-        <endpoint behaviorConfiguration="ApslserviceBehavior" binding="customBinding" bindingConfiguration="customUnsecureHttpBinding" contract="HelloWorld.Domain.Contract.IHelloWorldService" />
+        <endpoint behaviorConfiguration="HelloWorldserviceBehavior" binding="customBinding" bindingConfiguration="customUnsecureHttpBinding" contract="HelloWorld.Domain.Contract.IHelloWorldService" />
       </service>
     </services>
     <behaviors>
@@ -58,7 +58,7 @@
         </behavior>
       </serviceBehaviors>
       <endpointBehaviors>
-        <behavior name="ApslserviceBehavior" />
+        <behavior name="HelloWorldserviceBehavior" />
       </endpointBehaviors>
     </behaviors>
     <bindings>
